--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,6 @@ harness = false
 name = "stack_overflow"
 harness = false
 
-
 [dependencies]
 bootloader = { version = "0.9", features = ["map_physical_memory"] }
 volatile = "0.2.6"
@@ -20,12 +19,25 @@ x86_64 = "0.14.2"
 uart_16550 = "0.2.0"
 pic8259 = "0.10.1"
 pc-keyboard = "0.7.0"
-linked_list_allocator="0.9.0"
+linked_list_allocator = "0.9.0"
 
 [dependencies.lazy_static]
 version = "1.0"
 features = ["spin_no_std"]
 
+[dependencies.crossbeam-queue]
+version = "0.3.11"
+default-features = false
+features = ["alloc"]
+
+[dependencies.conquer-once]
+version = "0.2.0"
+default-features = false
+
+[dependencies.futures-util]
+version = "0.3.4"
+default-features = false
+features = ["alloc"]
 
 [package.metadata.bootimage]
 test-args = [
